# Roopam

./: .gitmodules  CMakeLists.txt  README.md
res/shaders/: line_2d.frag  line_2d.vert  quad.frag  quad.vert  rect.frag  rect.vert  rect_line.frag  rect_line.vert  rect_polygon.frag  rect_polygon.vert
src/: font_reader.hpp  main.cpp
src/core/: action_map.cpp  action_map.hpp  embedded_images.hpp  image.cpp  image.hpp  input.cpp  input.hpp  project.cpp  project.hpp  vmath.hpp  window.cpp  window.hpp
src/renderer/: color.cpp  color.hpp  draw_list.cpp  draw_list.hpp  line_batch.cpp  line_batch.hpp  primitives.hpp  quad_batch.cpp  quad_batch.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/ui/: ui_scene.cpp  ui_scene.hpp
src/utils/: vmath.hpp
